--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <!-- HTMX for interactive UI without much JS -->
     <script src="https://unpkg.com/htmx.org@1.9.5"></script>
+    <script src="https://unpkg.com/htmx.org/dist/ext/animate.js"></script>
     <!-- Add Alpine.js for minimal JS interactivity where needed -->
     <script defer src="https://unpkg.com/alpinejs@3.12.0/dist/cdn.min.js"></script>
     <script>
