--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -31,4 +31,8 @@
         </tbody>
     </table>
 </div>
+<h2>External Requests</h2>
+<ul id="requests-ul">
+    <li>Loading...</li>
+</ul>
 {% endblock %}
